--- a/serverless.yml
+++ b/serverless.yml
@@ -1,114 +1,105 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: serverless-appsync-lambda-node-dynamodb
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
+service: basic
 frameworkVersion: '3'
+
+plugins:
+  - serverless-appsync-plugin
+  - serverless-pseudo-parameters
 
 provider:
   name: aws
   runtime: nodejs12.x
+  stage: dev
+  region: ap-northeast-1
+  lambdaHashingVersion: 20201221
+  iam:
+    role:
+      statements:
+        - Effect: "Allow"
+          Action:            
+            - "dynamodb:PutItem"
+            - "dynamodb:UpdateItem"
+            - "dynamodb:DeleteItem"
+            - "dynamodb:GetItem"
+            - "dynamodb:Scan"
+          Resource: "arn:aws:dynamodb:#{AWS::Region}:*:table/${self:custom.TODO_TABLE}"
 
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+custom:      
+  TODO_TABLE: todo-table
 
-# you can add statements to the Lambda function's IAM Role here
-#  iam:
-#    role:
-#      statements:
-#        - Effect: "Allow"
-#          Action:
-#            - "s3:ListBucket"
-#          Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#        - Effect: "Allow"
-#          Action:
-#            - "s3:PutObject"
-#          Resource:
-#            Fn::Join:
-#              - ""
-#              - - "arn:aws:s3:::"
-#                - "Ref" : "ServerlessDeploymentBucket"
-#                - "/*"
+  appSync:
+    name: appsync-todo-apis-demo
+    authenticationType: API_KEY
+    mappingTemplates:      
+      - type: Mutation
+        field: createTodo
+        dataSource: createTodoFunction
+        request: false
+        response: false
+      - type: Mutation
+        field: updateTodo
+        dataSource: updateTodoFunction
+        request: false
+        response: false
+      - type: Mutation
+        field: deleteTodo
+        dataSource: deleteTodoFunction
+        request: false
+        response: false
+      - type: Query
+        field: getTodos
+        dataSource: getTodosFunction
+        request: false
+        response: false 
+    dataSources:        
+      - type: AWS_LAMBDA
+        name: createTodoFunction
+        config:
+          functionName: createTodo
+      - type: AWS_LAMBDA
+        name: updateTodoFunction
+        config:
+          functionName: updateTodo
+      - type: AWS_LAMBDA
+        name: deleteTodoFunction
+        config:
+          functionName: deleteTodo
+      - type: AWS_LAMBDA
+        name: getTodosFunction
+        config:
+          functionName: getTodos   
+          
+functions: 
+  getTodos:
+    handler: functions/getTodos.handler
+    environment:
+      TODO_TABLE_NAME: !Ref TodoTable
 
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
+  createTodo:
+    handler: functions/createTodo.handler
+    environment:
+      TODO_TABLE_NAME: !Ref TodoTable
 
-# you can add packaging information here
-#package:
-#  patterns:
-#    - '!exclude-me.js'
-#    - '!exclude-me-dir/**'
-#    - include-me.js
-#    - include-me-dir/**
+  updateTodo:
+    handler: functions/updateTodo.handler
+    environment:
+      TODO_TABLE_NAME: !Ref TodoTable
 
-functions:
-  hello:
-    handler: handler.hello
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - httpApi:
-#          path: /users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
+  deleteTodo:
+    handler: functions/deleteTodo.handler
+    environment:
+      TODO_TABLE_NAME: !Ref TodoTable
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
 
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+resources:
+  Resources:
+    TodoTable:
+      Type: "AWS::DynamoDB::Table"
+      Properties:
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:custom.TODO_TABLE}
